fixed three problems: 1) Link components do not want to be nested inside p tags, so this required creating a new CSS class called paragraph-content and replacing all the p's with div's. 2) adjusted left-column backgroundPosition to be 'top' instead of 'center' since my face was being cut off on contact.js. 3) added another sentence to about.js to explain to the viewer that they are on my portfolio website, since it is not obvious.

--- a/src/style/layouts.scss
+++ b/src/style/layouts.scss
@@ -33,12 +33,18 @@
 		    }
 		}
 	    }
+
+	    .paragraph-content {
+		margin: 15px;
+	    }
 	}
     }
+    
     .mobile-view-image-extra {
 	display: none;
     }
 }
+
 @media (max-width: 1279px) {
     .content-page-wrapper {
 	display: flex;
@@ -54,6 +60,9 @@
 	    width: 100%;
 	    object-fit: cover;
 	    border-radius: 3px;
+	}
+	.paragraph-content {
+	    margin: 15px;
 	}
     }
 }
